@@ -1,6 +1,5 @@
 mobac.mapsources.mappacks.openstreetmap.CloudMade
 mobac.mapsources.mappacks.openstreetmap.Mapnik
-mobac.mapsources.mappacks.openstreetmap.TilesAtHome
 mobac.mapsources.mappacks.openstreetmap.Hikebikemap
 mobac.mapsources.mappacks.openstreetmap.OpenPisteMap
 mobac.mapsources.mappacks.openstreetmap.OpenSeaMap
